--- a/index.html
+++ b/index.html
@@ -1,79 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Site</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- CSS Personalizado -->
-  <style>
-    /* Estilos personalizados aqui */
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
-
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">Meu Site</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#sobre">Sobre Nós</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#servicos">Serviços</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#galeria">Galeria</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#depoimentos">Depoimentos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contato">Contato</a>
-          </li>
+  <header style="background-color: aliceblue;">
+    <div style="width: 100vw; height: 20px; background-color: blue;"></div>
+    <div id="header-flex-container-1">
+        <div id="menu-header">
+          <img id="logo"src="" alt="">
+          <p style="color: orange; padding-top: 10px;">Empresa</p>
+        </div>
+        <ul id="menu-header">
+            <li><a href="">Sobre nós</a></li>
+            <li><a href="">Serviços</a></li>
+            <li><a href="">Galeria/frota</a></li>
+            <li><a href="">Depoimentos</a></li>
+            <li><a href="">Contato</a></li>
         </ul>
-      </div>
     </div>
-  </nav>
-
-  <div id="sobre" class="container">
-    <h1>Sobre Nós</h1>
-    <p>Texto sobre a empresa ou organização.</p>
-  </div>
-
-  <div id="servicos" class="container">
-    <h1>Serviços</h1>
-    <p>Descrição dos serviços oferecidos.</p>
-  </div>
-
-  <div id="galeria" class="container">
-    <h1>Galeria</h1>
-    <p>Aqui serão exibidas as imagens da galeria.</p>
-  </div>
-
-  <div id="depoimentos" class="container">
-    <h1>Depoimentos</h1>
-    <p>Depoimentos dos clientes satisfeitos.</p>
-  </div>
-
-  <div id="contato" class="container">
-    <h1>Contato</h1>
-    <p>Formulário de contato ou informações de contato.</p>
-  </div>
-
-  <!-- jQuery, Popper.js, Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <!-- Seu JavaScript personalizado -->
-  <script>
-    // Se necessário, adicione scripts JavaScript personalizados aqui
-  </script>
+</header>
+<div id="fundo">
+    <img id="baner" src="/imagens/iStock-480652712.jpg" alt="">
+</div>
 </body>
 </html>
