--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
-<body>
-  <header style="background-color: aliceblue;">
-    <div style="width: 100vw; height: 20px; background-color: blue;"></div>
-    <div id="header-flex-container-1">
+<body style="background-color: #ececec;">
+  <header>
+    <div style="width: 100vw; height: 2vh; background-color: rgba(5, 5, 173, 0.774);"></div>
+    <div id="header-flex-container-1" class="bg-light">
         <div id="menu-header">
-          <img id="logo"src="" alt="">
-          <p style="color: orange; padding-top: 10px;">Empresa</p>
+          <img id="logo" src="" alt="" class="rounded-circle" style="width: 70px; height: 70px; background-color: orange;">
+          <p style="color: orange; padding-top: 1vh;">Empresa</p>
         </div>
         <ul id="menu-header">
             <li><a href="">Sobre nós</a></li>
@@ -26,6 +26,168 @@
 </header>
 <div id="fundo">
     <img id="baner" src="/imagens/iStock-480652712.jpg" alt="">
+    <div id="text-baner">
+        <ul>
+            <li><p>[Empresa]</p></li>
+            <li><p>Fretes</p></li>
+            <li><div id="linha"></div></li>
+        </ul>
+    </div>
+</div>
+<div id="text-baner-span">
+    <ul>
+        <li><p>Os melhores fretes</p></li>
+        <li><p>são com a gente!</p></li>
+    </ul>
+</div>
+<div id="sobre-nos">
+    <div id="barra-lateral">
+    </div>
+    <div id="span-box">
+        <h1 id="titulo-span-box">Sobre nós</h1>
+        <span id="text-span-box">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s, when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived not only five centuries, but also
+            the leap into electronic typesetting, remaining essentially unchanged Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s, when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived not only five centuries, but also
+            the leap into electronic typesetting, remaining essentially unchanged.</span>
+    </div>
+    <div id="barra-lateral">
+    </div>
+    </div>
+<div id="divisao"></div>
+<h1 id="titulo-span-box">Serviços</h1>
+    <div id="servicos">
+        <div id="transp-veiculo-container" >
+            <img id="transp-veiculo" src="/imagens/fretes/transporte-de-motos-espresso-car.png" alt="">
+        </div>
+        <div id="transp-veiculo-text">
+            <p>Frete de</p>
+            <p>Motocicletas</p>
+        </div>
+    </div>
+    <div id="servicos">
+        <div id="transp-veiculo-container" >
+            <img id="transp-veiculo" src="/imagens/fretes/transporte-de-carros-expresso-car.png" alt="">
+        </div>
+        <div id="transp-veiculo-text">
+            <p>Frete de</p>
+            <p>Carros</p>
+        </div>
+    </div>
+    <div id="servicos">
+        <div id="transp-veiculo-container" >
+            <img id="transp-veiculo" src="/imagens/fretes/pngegg.png" alt="">
+        </div>
+        <div id="transp-veiculo-text">
+            <p>Frete de</p>
+            <p>Caminhões</p>
+        </div>
+    </div>
+    <div id="servicos">
+        <div id="transp-veiculo-container" >
+            <img id="transp-veiculo" src="/imagens/fretes/helicopter-with-ai-generated-free-png.png" alt="">
+        </div>
+        <div id="transp-veiculo-text">
+            <p>Frete de</p>
+            <p>Aeronaves</p>
+        </div>
+    </div>
+<div id="divisao"></div>
+<!------------------------------------------------------------------------Espaço para fazer o carrossel------------------------------------------------------------------------------>
+<h1 id="titulo-span-box">Depoimentos</h1>
+<div id="depoimentos">
+    <div id="text-depoimentos-1">
+        <div id="titulo-depoimentos">
+            <p>Carla Rodrigues</p>
+        </div>
+        <div>
+            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
+                text of the printing and typesetting
+                industry. Lorem Ipsum has been
+                the industry's standard dummy
+                text ever since the 1500s.”</p>
+        </div>
+    </div>
+    <div id="text-depoimentos-2">
+        <div id="titulo-depoimentos">
+            <p>João André</p>
+        </div>
+        <div>
+            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
+                text of the printing and typesetting
+                industry. Lorem Ipsum has been
+                the industry's standard dummy
+                text ever since the 1500s.”</p>
+        </div>
+    </div>
+</div>
+<div id="depoimentos">
+    <div id="text-depoimentos-1">
+        <div id="titulo-depoimentos">
+            <p>Amélia dos Santos</p>
+        </div>
+        <div>
+            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
+                text of the printing and typesetting
+                industry. Lorem Ipsum has been
+                the industry's standard dummy
+                text ever since the 1500s.”</p>
+        </div>
+    </div>
+    <div id="text-depoimentos-2">
+        <div id="titulo-depoimentos">
+            <p>Rodrigo Ferreira</p>
+        </div>
+        <div>
+            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
+                text of the printing and typesetting
+                industry. Lorem Ipsum has been
+                the industry's standard dummy
+                text ever since the 1500s.”</p>
+        </div>
+    </div>
+</div>
+<div id="divisao"></div>
+<!------------------------------------------------------------contato--------------------------------------------------------------------->
+<div id="contato">
+    <div>
+        <h1 id="titulo-span-box">Contato</h1>
+    </div>
+    <div>
+        <div class="col-12">
+            <label for="email" id="text-form" class="form-label">Nome: <span class="text-body-secondary"></span></label>
+            <input type="email" class="form-control" id="email" placeholder="">
+          </div>
+    </div>
+    <div>
+        <div class="col-12">
+            <label for="email" id="text-form" class="form-label">Email: <span class="text-body-secondary"></span></label>
+            <input type="email" class="form-control" id="email" placeholder="">
+          </div>
+    </div>
+    <div>
+        <div class="col-12">
+            <label for="email" id="text-form" class="form-label">Telefone: <span class="text-body-secondary"></span></label>
+            <input type="email" class="form-control" id="email" placeholder="">
+          </div>
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" id="text-form" class="form-label">Mensagem</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 200px;"></textarea>
+    </div>
+    <div>
+        <div id="icon-container">
+            <div id="icon-box"><img id="icon" src="/imagens/social/whatsapp.png" alt=""></div>
+            <div id="icon-box"><img id="icon" src="/imagens/social/facebook.png" alt=""></div>
+            <div id="icon-box"><img id="icon" src="/imagens/social/instagram.png" alt=""></div>
+            <div id="icon-box"><img id="icon" src="/imagens/social/phone-call.png" alt=""></div>
+        </div>
+    </div>
+    
 </div>
 </body>
 </html>
