corpo do site completo!

--- a/index.html
+++ b/index.html
@@ -187,7 +187,29 @@
             <div id="icon-box"><img id="icon" src="/imagens/social/phone-call.png" alt=""></div>
         </div>
     </div>
-    
 </div>
+<div>
+    <iframe id="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31204.391821054855!2d-44.99138595!3d-12.142981500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x75f8aae10d4ae69%3A0x97810f362c2db8c5!2sBarreiras%2C%20BA!5e0!3m2!1spt-BR!2sbr!4v1711371811513!5m2!1spt-BR!2sbr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+<footer>
+    <div id="footer-contato">
+        <div id="logo-footer">
+            <img id="logo" src="" alt="" class="rounded-circle" style="width: 70px; height: 70px; background-color: orange;">
+            <p style="color: orange; padding-top: 1vh;">Empresa</p>
+        </div>
+        <div id="contato-footer-text">
+            <ul id="footer-ul">
+                <li id="footer-list"><p id="text-negrito">Email:</p><p id="text-footer">nomedaempresa@gmail.com</p></li>
+                <li id="footer-list"><p id="text-negrito">Horário de atendimento:</p><p id="text-footer">Segunda à sexta das 6h00 às 19h00</p></li>
+                <li id="footer-list"><p id="text-negrito">Endereço:</p><p id="text-footer">Rua ABC, 01 - Alfa</p></li>
+                <li id="footer-list"><p id="text-negrito">Fone/Whatsapp:</p><p id="text-footer">(xx) xxxx-xxxx / (xx) x-xxxx-xxxx</p></li>
+            </ul>
+        </div>
+    </div>
+    <div id="footer-logodogs">
+        <p id="text-logodogs">Desenvolvido por</p>
+        <img id="logo-oficial" src="/imagens/fretes/logo2Oficial.png" alt="">
+    </div>
+</footer>
 </body>
 </html>
