--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nome da Empresa.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../underdogs_site/css/estilo.css">
 </head>
 <body style="background-color: #ececec;">
   <header>
@@ -25,7 +25,7 @@
     </div>
 </header>
 <div id="fundo">
-    <img id="baner" src="/imagens/iStock-480652712.jpg" alt="">
+    <img id="baner" src="imagens/iStock-480652712.jpg" alt="">
     <div id="text-baner">
         <ul>
             <li><p>[Empresa]</p></li>
@@ -62,7 +62,7 @@
 <h1 id="titulo-span-box">Serviços</h1>
     <div id="servicos">
         <div id="transp-veiculo-container" >
-            <img id="transp-veiculo" src="/imagens/fretes/transporte-de-motos-espresso-car.png" alt="">
+            <img id="transp-veiculo" src="imagens/fretes/transporte-de-motos-espresso-car.png" alt="">
         </div>
         <div id="transp-veiculo-text">
             <p>Frete de</p>
@@ -71,7 +71,7 @@
     </div>
     <div id="servicos">
         <div id="transp-veiculo-container" >
-            <img id="transp-veiculo" src="/imagens/fretes/transporte-de-carros-expresso-car.png" alt="">
+            <img id="transp-veiculo" src="imagens/fretes/transporte-de-carros-expresso-car.png" alt="">
         </div>
         <div id="transp-veiculo-text">
             <p>Frete de</p>
@@ -80,7 +80,7 @@
     </div>
     <div id="servicos">
         <div id="transp-veiculo-container" >
-            <img id="transp-veiculo" src="/imagens/fretes/pngegg.png" alt="">
+            <img id="transp-veiculo" src="imagens/fretes/pngegg.png" alt="">
         </div>
         <div id="transp-veiculo-text">
             <p>Frete de</p>
@@ -89,7 +89,7 @@
     </div>
     <div id="servicos">
         <div id="transp-veiculo-container" >
-            <img id="transp-veiculo" src="/imagens/fretes/helicopter-with-ai-generated-free-png.png" alt="">
+            <img id="transp-veiculo" src="imagens/fretes/helicopter-with-ai-generated-free-png.png" alt="">
         </div>
         <div id="transp-veiculo-text">
             <p>Frete de</p>
@@ -98,6 +98,35 @@
     </div>
 <div id="divisao"></div>
 <!------------------------------------------------------------------------Espaço para fazer o carrossel------------------------------------------------------------------------------>
+
+<div id="carouselExample" class="carousel slide" style="max-width: 90%; max-height: 750px; margin: auto;">
+    <div class="carousel-inner">
+        <div class="carousel-item active "  style=" transition: transform 1s ease;">
+            <img src="imagens/helicoptero.jpeg" class="d-block w-100" height="750" alt="Helicoptero">
+        </div>
+        <div class="carousel-item" style=" transition: transform 1s ease;">
+            <img src="imagens/carro.jpeg" class="d-block w-100" height="750" alt="Carro">
+        </div>
+        <div class="carousel-item" style=" transition: transform 1s ease;">
+            <img src="imagens/carros_novos_e_seminovos.jpg" class="d-block w-100" height="750" alt="Carros Novos e Seminovos">
+        </div>
+        <div class="carousel-item" style=" transition: transform 1s ease;">
+            <img src="imagens/iStock-480652712.jpg" class="d-block w-100" height="750" alt="Imagem 4">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+<br><br>
+<a href="#"> <img src="imagens/social/whatsapp.png" style="width: 35px; height: 35px; position: fixed; right: 20px; bottom: 60px;"></a>
+<div id="divisao"></div>
+
 <h1 id="titulo-span-box">Depoimentos</h1>
 <div id="depoimentos">
     <div id="text-depoimentos-1">
@@ -151,6 +180,8 @@
         </div>
     </div>
 </div>
+
+
 <div id="divisao"></div>
 <!------------------------------------------------------------contato--------------------------------------------------------------------->
 <div id="contato">
@@ -211,5 +242,12 @@
         <img id="logo-oficial" src="/imagens/fretes/logo2Oficial.png" alt="">
     </div>
 </footer>
+
+<script src="js/bootstrap.min.js">
+
+
+
+</script>
+
 </body>
 </html>
