--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div id="divisao"></div>
 <!------------------------------------------------------------------------Espaço para fazer o carrossel------------------------------------------------------------------------------>
 
-<div id="carouselExample" class="carousel slide" style="max-width: 90%; max-height: 750px; margin: auto;">
+<div id="carrossel1" class="carousel slide" style="max-width: 90%; max-height: 750px; margin: auto;">
     <div class="carousel-inner">
         <div class="carousel-item active "  style=" transition: transform 1s ease;">
             <img src="imagens/helicoptero.jpeg" class="d-block w-100" height="750" alt="Helicoptero">
@@ -114,18 +114,32 @@
             <img src="imagens/iStock-480652712.jpg" class="d-block w-100" height="750" alt="Imagem 4">
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carrossel1" data-bs-slide="prev" style="width: 100px; height: 100px; margin: auto;">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carrossel1" data-bs-slide="next" style="width: 100px; height: 100px; margin: auto;">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
 <br><br>
-<a href="#"> <img src="imagens/social/whatsapp.png" style="width: 35px; height: 35px; position: fixed; right: 20px; bottom: 60px;"></a>
+
+<a href="https://chat.whatsapp.com/B7jGimSuQRDL6kudk6aFfN" id="Wlink"> <img src="imagens/whatsapp-logo.png" id="Wlogo" style="width: 40px; height: 40px; position: fixed; right: 20px; bottom: 60px;"></a>
 <div id="divisao"></div>
+
+<button  onclick="toggleButtons()" id="Bmenu"  style= "display: none; position: fixed;top: 50px; right: 20px; width: 45px; height: 45px; border: none; border-radius: 5px;"><img src="imagens/Icone menu.png" style=" width: 40px; height: 40px;"></button>
+
+
+<div id="Batalhos" class="btn-group" role="group" aria-label="Basic example" style= "display: none; position: fixed;top: 55px; right: 80px;">
+    <button onclick="scrollToElement('B1')" type="button" class="btn btn-primary">Sobre-nos</button>
+    <button onclick="scrollToElement('B2')" type="button" class="btn btn-primary">Serviços</button>
+    <button onclick="scrollToElement('B3')" type="button" class="btn btn-primary">Galeria/frota</button>
+    <button onclick="scrollToElement('B4')" type="button" class="btn btn-primary">Depoimentos</button>
+    <button onclick="scrollToElement('B5')" type="button" class="btn btn-primary">Contato</button>
+  </div>
+
 
 <h1 id="titulo-span-box">Depoimentos</h1>
 <div id="depoimentos">
@@ -243,11 +257,63 @@
     </div>
 </footer>
 
-<script src="js/bootstrap.min.js">
+<script src="js/bootstrap.min.js"></script>
 
 
+<script>
+    window.onscroll = function() {scrollFunction()};
+  
+    function scrollFunction() {
+  if (document.documentElement.scrollTop > 60) {
+    document.getElementById("Bmenu").style.display = "block";
+    document.getElementById("Batalhos").style.display = "none";
+  } else {
+    document.getElementById("Bmenu").style.display = "none";
+    document.getElementById("Batalhos").style.display = "none";
+  }
+}
 
-</script>
+
+    function toggleButtons() {
+      var x = document.getElementById("Batalhos");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+
+    function scrollToElement(id) {
+  var element;
+  switch(id) {
+    case 'B1':
+      element = document.getElementById("sobre-nos");
+      break;
+    case 'B2':
+      element = document.getElementById("servicos");
+      break;
+    case 'B3':
+      element = document.getElementById("carrossel1");
+      break;
+    case 'B4':
+      element = document.getElementById("depoimentos");
+      break;
+    case 'B5':
+      element = document.getElementById("contato");
+      break;
+  }
+  if (element) {
+    element.scrollIntoView();
+  }
+}
+
+document.getElementById('Wlink').onclick = function() {
+  document.getElementById('Wlogo').style.transition = 'transform 0.4s';
+  document.getElementById('Wlogo').style.transform = 'rotate(360deg) scale(1.7)';
+};
+
+
+  </script>
 
 </body>
 </html>
