--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div id="span-box">
         <h1 id="titulo-span-box">Sobre nós</h1>
-        <span id="text-span-box">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        <span id="text-span-box">Ensinando git -- Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the
             1500s, when an unknown printer took a galley of type and scrambled it to
             make a type specimen book. It has survived not only five centuries, but also
