--- a/index.html
+++ b/index.html
@@ -45,15 +45,43 @@
     </div>
     <div id="span-box">
         <h1 id="titulo-span-box">Sobre nós</h1>
-        <span id="text-span-box">Ensinando git -- Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the
-            1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the
-            1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also
-            the leap into electronic typesetting, remaining essentially unchanged.</span>
+        <span id="text-span-box">
+            <p style="text-align: center;"><b>Underdogs: Transporte para Todos</b></p><br>
+            <p> Somos a <b>Underdogs</b>, uma empresa de transporte de automoveis com uma
+                missão, oferecer soluções de frete acessíveis e confiáveis para todos os tipos
+                de veículos, como carros de passeio, motocicletas, caminhões e até mesmo
+                helicópteros. <b>Acreditamos que ninguém deve ser deixado para trás</b>, por isso oferecemos
+                preços competitivos e serviços flexíveis para atender às suas necessidades.
+                Seja você um estudante mudando para uma nova cidade, um vendedor
+                precisando transportar um veículo para outro estado, ou uma família que
+                precisa transportar seu carro para as férias, estamos aqui para ajudar.
+                <b>Nossa equipe de especialistas está comprometida em fornecer um serviço de
+                    alta qualidade</b>, desde o momento em que você faz o contato até o momento
+                em que seu veículo é entregue em segurança. Usamos tecnologia moderna
+                para rastrear a localização do seu carro em tempo real, para que você possa
+                ter certeza de que ele está sempre seguro.
+                </p><br>
+                <p style="text-align: left;"><b>Alguns dos nossos diferenciais:</b></p>
+                <p style="text-align: left;"> 
+                    <b>Preços competitivos:</b> Oferecemos os melhores preços do mercado para
+                    transporte de veículos.<br>
+                    <b>Serviços flexíveis:</b> Podemos transportar qualquer tipo de veículo, para
+                    qualquer lugar, a qualquer hora.<br>
+                    <b>Atendimento personalizado:</b> Nossa equipe está sempre disponível para
+                    responder às suas perguntas e ajudá-lo com suas necessidades.<br>
+                   <b> Tecnologia moderna:</b> Usamos tecnologia moderna para rastrear a localização
+                    do seu carro em tempo real.<br>
+                    <b>Segurança garantida:</b> Seu carro estará sempre seguro com a Underdogs<br>
+                
+                </p>
+
+
+                <p><b>Se você está procurando uma empresa de transporte de carros confiável e
+                    acessível, a Underdogs é a escolha certa para você.</b></p><br>
+                    <p style="text-align: center;"><b>Solicite um orçamento hoje mesmo! </b></p>
+                    <p style="text-align: center;"><a href="#">https://www.underdogs.com</a></p>
+                       
+        </span>
     </div>
     <div id="barra-lateral">
     </div>
@@ -148,11 +176,8 @@
             <p>Carla Rodrigues</p>
         </div>
         <div>
-            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
-                text of the printing and typesetting
-                industry. Lorem Ipsum has been
-                the industry's standard dummy
-                text ever since the 1500s.”</p>
+            <p id="text-span-box-depoimentos">"A Underdogs foi ótima! Eles transportaram meu carro de São Paulo para o Rio
+                de Janeiro em apenas dois dias, e o preço foi muito bom."</p>
         </div>
     </div>
     <div id="text-depoimentos-2">
@@ -160,11 +185,9 @@
             <p>João André</p>
         </div>
         <div>
-            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
-                text of the printing and typesetting
-                industry. Lorem Ipsum has been
-                the industry's standard dummy
-                text ever since the 1500s.”</p>
+            <p id="text-span-box-depoimentos">"Eu precisei transportar um carro e uma moto para uma cidade do interior, e a
+                Underdogs foi a única empresa que me ofereceu um preço que eu podia pagar
+                pelos dois automóveis." </p>
         </div>
     </div>
 </div>
@@ -174,11 +197,8 @@
             <p>Amélia dos Santos</p>
         </div>
         <div>
-            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
-                text of the printing and typesetting
-                industry. Lorem Ipsum has been
-                the industry's standard dummy
-                text ever since the 1500s.”</p>
+            <p id="text-span-box-depoimentos">"A Underdogs foi muito profissional e eficiente. Eles me mantiveram atualizado
+                sobre a localização do meu carro durante todo o tempo." </p>
         </div>
     </div>
     <div id="text-depoimentos-2">
@@ -186,11 +206,8 @@
             <p>Rodrigo Ferreira</p>
         </div>
         <div>
-            <p id="text-span-box-depoimentos">“Lorem Ipsum is simply dummy
-                text of the printing and typesetting
-                industry. Lorem Ipsum has been
-                the industry's standard dummy
-                text ever since the 1500s.”</p>
+            <p id="text-span-box-depoimentos">“Essa empresa foi a melhor que já vi para transportar um helicóptero, com
+                segurança e eficiência, sem dúvidas nenhuma é a única empresa em que confio para isso.”</p>
         </div>
     </div>
 </div>
